--- a/Aix-donate/AndroidManifest.xml
+++ b/Aix-donate/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-		package="net.veierland.aix"
+		package="net.veierland.aixd"
 		android:versionCode="2"
 		android:versionName="0.1.1">
 	
@@ -25,7 +25,7 @@
         		android:label="@string/title_select_location"
         		android:windowSoftInputMode="stateHidden|adjustPan" />
         
-        <provider android:name=".AixProvider" android:authorities="net.veierland.aix" />
+        <provider android:name=".AixProvider" android:authorities="net.veierland.aixd" />
         
         <service android:name=".AixService" />
 
