--- a/Aix/AndroidManifest.xml
+++ b/Aix/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 		package="net.veierland.aix"
-		android:versionCode="2"
-		android:versionName="0.1.1">
+		android:versionCode="5"
+		android:versionName="0.1.3">
 	
 	<application
 			android:icon="@drawable/app_icon"
@@ -20,6 +20,10 @@
             </intent-filter>
 
         </activity>
+        
+        <activity android:name=".AixUnitSettingsActivity"
+        		android:label="@string/title_unitsettings"
+        		android:windowSoftInputMode="stateHidden|adjustPan" />
         
         <activity android:name=".AixLocationSelectionActivity"
         		android:label="@string/title_select_location"
@@ -42,6 +46,7 @@
     			<action android:name="android.intent.action.TIMEZONE_CHANGED" />
     			<action android:name="android.intent.action.DATE_CHANGED" />
     			<action android:name="android.intent.action.TIME_SET" />
+    			<action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
     		</intent-filter>
     	</receiver>
     	
@@ -49,6 +54,8 @@
     
     <uses-sdk android:minSdkVersion="4" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    
     <!-- 
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
