--- a/Aix/AndroidManifest.xml
+++ b/Aix/AndroidManifest.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 		package="net.veierland.aix"
-		android:versionCode="5"
-		android:versionName="0.1.3">
+		android:versionCode="6"
+		android:versionName="0.1.4">
 	
 	<application
 			android:icon="@drawable/app_icon"
-			android:label="@string/app_name"
+			android:label="@string/widget_name"
 			android:description="@string/app_description"
 			android:debuggable="false">
     	
@@ -32,8 +32,8 @@
         <provider android:name=".AixProvider" android:authorities="net.veierland.aix" />
         
         <service android:name=".AixService" />
-
-		<receiver android:name=".AixWidget" android:label="@string/widget_name">
+    	
+    	<receiver android:name="AixWidget" android:label="@string/widget_name">
 			<intent-filter>
 				<action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
     		</intent-filter>
