--- a/Aix/AndroidManifest.xml
+++ b/Aix/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 		package="net.veierland.aix"
-		android:versionCode="6"
-		android:versionName="0.1.4">
+		android:versionCode="7"
+		android:versionName="0.1.5">
 	
 	<application
 			android:icon="@drawable/app_icon"
@@ -33,7 +33,7 @@
         
         <service android:name=".AixService" />
     	
-    	<receiver android:name="AixWidget" android:label="@string/widget_name">
+    	<receiver android:name=".AixWidget" android:label="@string/widget_name">
 			<intent-filter>
 				<action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
     		</intent-filter>
