--- a/Aix/app/build.gradle
+++ b/Aix/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 28
     buildToolsVersion "28.0.3"
 
     defaultConfig {
         applicationId "net.veierland.aix"
-        minSdkVersion 26
-        targetSdkVersion 26
+        minSdkVersion 16
+        targetSdkVersion 28
     }
 
     buildTypes {
@@ -21,5 +21,5 @@ android {
 }
 
 dependencies {
-    implementation 'com.android.support:support-compat:26.1.0'
+    implementation 'com.android.support:support-compat:28.0.0-alpha1'
 }
