--- a/Aixd/app/src/main/AndroidManifest.xml
+++ b/Aixd/app/src/main/AndroidManifest.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 		package="net.veierland.aixd"
-		android:versionCode="24"
-		android:versionName="0.1.9.10"
+		android:versionCode="28"
+		android:versionName="0.1.9.14"
 		android:installLocation="internalOnly">
     
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+	<uses-permission android:name="android.permission.WAKE_LOCK" />
     
 	<application
 			android:icon="@drawable/app_icon"
