--- a/Aixd/app/src/main/AndroidManifest.xml
+++ b/Aixd/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 		package="net.veierland.aixd"
-		android:versionCode="28"
-		android:versionName="0.1.9.14"
+		android:versionCode="29"
+		android:versionName="0.1.9.15"
 		android:installLocation="internalOnly">
     
     <uses-permission android:name="android.permission.INTERNET" />
@@ -89,7 +89,11 @@
 				<action android:name="net.veierland.aix.ACCEPT_LANDSCAPE_VERTICAL_CALIBRATION" />
     		</intent-filter>
     	</receiver>
-    	
-    </application>
+
+		<uses-library
+			android:name="org.apache.http.legacy"
+			android:required="false" />
+
+	</application>
 
 </manifest> 
