--- a/Aixd/app/src/main/AndroidManifest.xml
+++ b/Aixd/app/src/main/AndroidManifest.xml
@@ -1,19 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 		package="net.veierland.aixd"
-		android:versionCode="29"
-		android:versionName="0.1.9.15"
+		android:versionCode="30"
+		android:versionName="0.1.9.16"
 		android:installLocation="internalOnly">
     
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.WAKE_LOCK" />
-    
+
 	<application
 			android:icon="@drawable/app_icon"
 			android:label="@string/widget_name"
 			android:description="@string/app_description"
-			android:theme="@style/AixTheme">
+			android:theme="@style/AixTheme"
+			android:usesCleartextTraffic="true">
 			
     	<activity android:name=".AixConfigure"
     	    	android:label="@string/title_configure"
